--- a/web-developer.html
+++ b/web-developer.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://proximity.applytojob.com/apply/s45lpoSq1J/Senior-React-Web-Developer-Developer'>Senior React Web Developer Developer - ProximityCR - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://careers.jobscore.com/careers/dae/jobs/web-application-developer-ts-sci-with-polygraph-bf6nraCM4r6BkYaICoXfFy'>Web Application Developer - TS/SCI with Polygraph #0442 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -116,7 +120,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698349571-it-web-design-app-developer-internship'>Seeka Technology IT / Web Design / App Developer Internship | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698349571-it-web-design-app-developer-internship'>Seeka Technology IT / Web Design / App Developer Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -152,7 +156,7 @@
 Develop process requirements and implement product development and release
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ObsidianDigital/743999698329025-web-developer'>Obsidian Digital Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ObsidianDigital/743999698329025-web-developer'>Obsidian Digital Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -168,7 +172,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHW9Vfwr&k=Job&j=o3w1afwu&__jvst=Employee&__jvsd=sFWIogws&__jvsc=Twitter&bid=nnRdmMw4'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHW9Vfwr&k=Job&j=o3w1afwu&__jvst=Employee&__jvsd=sFWIogws&__jvsc=Twitter&bid=nnRdmMw4'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -190,7 +194,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/world-travel-holdings-looking-for-junior-web-applications-developer/'>World Travel Holdings looking for Junior Web Applications Developer</a></h5> 
+<h5><a href='https://dedeleads.com/job/world-travel-holdings-looking-for-junior-web-applications-developer/'>World Travel Holdings looking for Junior Web Applications Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -240,7 +244,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://apiax.join.com/jobs/458971-front-end-web-developer'>Job @ Apiax (Lisbon): Front-End Web Developer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apiax.join.com/jobs/458971-front-end-web-developer'>Job @ Apiax (Lisbon): Front-End Web Developer | JOIN</a></h5> 
 <p><span class="badge badge-light">Lisbon Lisbon, Portugal</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -274,7 +278,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qhgaVfwm&k=Job&j=okfpbfwT&__jvst=Employee&__jvsd=sPAjBgw4&__jvsc=Twitter&bid=nYellMw9'>Scaled Agile Careers - Web Application Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qhgaVfwm&k=Job&j=okfpbfwT&__jvst=Employee&__jvsd=sPAjBgw4&__jvsc=Twitter&bid=nYellMw9'>Scaled Agile Careers - Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Boulder, Colorado</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -296,7 +300,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='https://enmacc.join.com/jobs/457555-full-stack-web-developer-m-f-d'>Job @ Enmacc (Munich): Full Stack Web Developer (m... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://enmacc.join.com/jobs/457555-full-stack-web-developer-m-f-d'>Job @ Enmacc (Munich): Full Stack Web Developer (m... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -353,7 +357,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">Auckland</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/spins/jobs/1931961'>Job Application for Jr Front-End Web Developer (Sherman Oaks) at SPINS, LLC</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/spins/jobs/1931961'>Job Application for Jr Front-End Web Developer (Sherman Oaks) at SPINS, LLC</a></h5> 
 <p><span class="badge badge-light">Sherman Oaks, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -381,7 +385,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24562-Senior-Web-Developer?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/24562-Senior-Web-Developer?source=twitter'>
       Senior Web Developer at Persado - San Franciso, CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -439,7 +443,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">Houston, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://www.proctors.co.uk/careers/angular-front-end-web-developer-0'>Angular Front-End Web Developer | Proctor + Stevenson</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.proctors.co.uk/careers/angular-front-end-web-developer-0'>Angular Front-End Web Developer | Proctor + Stevenson</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -453,10 +457,6 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697847428-praktikant-in-web-application-development'>Bosch Group Praktikant*in Web Application Development | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-23</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999697932447-java-back-end-front-end-web-developer'>Denodo Technologies Java Back End / Front End Web Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">A Coru?a, Spain</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
 
